[metadata]
name = timeplus
version = 0.0.1
author = Gang Tao
author_email = gang@timeplus.io
description =Timeplus Python SDK
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/timeplus-io/gluon/python
project_urls =
    Bug Tracker = https://github.com/timeplus-io/gluon/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache License Version 2.0
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.9

[options.packages.find]
where = .